<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_DbLogState" Id="{d7f89bcc-12dd-49e7-991a-b3d5140f92ca}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_DbLogState :
(
	idle := 0, 	// Buffer queing
    init,		// Not used
    writing,	// Writing to database
    error		// Get error response from database
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>