<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RecordSQL" Id="{c22ca813-56d1-45d3-a2ad-9ac2c556a6da}" SpecialFunc="None">
    <Declaration><![CDATA[(*
:Author: 

	Takashi Ichihashi Beckhoff Automation co. ltd.
	
:Date:

	2023-03-09
	
Overview
==================



Infosys Link:  `https://infosys.beckhoff.com/content/1033/tf6420_tc3_database_server/8117583755.html?id=5199556541044360835 <https://infosys.beckhoff.com/content/1033/tf6420_tc3_database_server/8117583755.html?id=5199556541044360835>`

Quick start
======================

As first you have to deine data model that the sampling data to insert to influxDB measurement.  The data models are structured by parent and child that is corresponding data tags and fields on influxDB.

.. code:: DataTag structure

	TYPE DataTag:
	STRUCT
		{attribute 'TagName' := 'machine_id'}
		machine_id : STRING(255); // 設備名
		{attribute 'TagName' := 'data_type_id'}
		data_type_id : STRING(255); // 発生イベント種別
	END_STRUCT
	END_TYPE	

	
.. code:: DataField structure

	TYPE PerformanceData EXTENDS DataTag:
	STRUCT
		{attribute 'FieldName' := 'plc_task_time'}
		task_time: UDINT;
		{attribute 'FieldName' := 'cpu_usage'}
		cpu_usage: UDINT;
		{attribute 'FieldName' := 'latency'}
		latency: UDINT;
		{attribute 'FieldName' := 'max_latency'}
		max_latency: UDINT;
		{attribute 'FieldName' := 'exceed_counter'}
		exceed_counter: UDINT;
		{attribute 'FieldName' := 'ec_lost_frames'}
		ec_lost_frames: UDINT;
		{attribute 'FieldName' := 'ec_frame_rate'}
		ec_frame_rate: LREAL;
		{attribute 'FieldName' := 'ec_lost_q_frame'}
		ec_lost_q_frames: UDINT;
		{attribute 'FieldName' := 'ec_q_frame_rate'}
		ec_q_frame_rate: LREAL;
		{attribute 'FieldName' := 'executing'}
		executing: BOOL;
		{attribute 'FieldName' := 'DB_queue_count'}
		db_insert_queue_count: UDINT;
		{attribute 'FieldName' := 'DB_buffer_current_index'}
		current_index: UDINT;
		{attribute 'FieldName' := 'DB_buffer_next_index'}
		next_index: UDINT;
	
	END_STRUCT
	END_TYPE
	
*)

FUNCTION_BLOCK RecordSQL IMPLEMENTS IRecordDB
VAR_INPUT
	nDBID						: UDINT;					// Database ID for TF6420
	DB_Parameter				: Tc2_Utilities.T_Arg;
END_VAR
VAR_OUTPUT
	bBusy			: BOOL;	// In writing database
	bError			: BOOL; // Somthing wrong situation happend
	TcResult		: Tc3_Database.I_TcMessage; // Response message
    sErrorMessage	: STRING(255);	// Error message
END_VAR
VAR
	
	//for generating timestamp
	fbGetSystemTime1: GetSystemTime;
	dwTimeLoDW: DWORD;
	dwTimeHiDW: DWORD;
	tFileTime: T_FILETIME;
	nTimestamp: LINT;
	
	//for insert samples
	fbPLCDBCmd: FB_PLCDBCmdEvt(sNetID := '', tTimeout := T#19S);
	_query								: STRING(512);
	
	// Variables for queue feature
	get_data_t 			: T_Arg;
	get_data 			: DbInsertCommand;
	State				: E_DbLogState;
	_queue : dequeue;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
CASE State OF

	E_DbLogState.idle:
		
		IF NOT fbPLCDBCmd.bBusy THEN
			State := E_DbLogState.init;
		END_IF

	E_DbLogState.init:
	
		IF NOT fbPLCDBCmd.bBusy AND _queue.queue_usage > 0 THEN
			// getting data
			get_data := _queue.get();
			State := E_DbLogState.writing;		
		END_IF

	E_DbLogState.writing:
		//Write buffer element to database
		IF fbPLCDBCmd.Execute(nDBID, 
							ADR(_query), 
							SIZEOF(_query), 
							get_data.data_body.pData, 
							get_data.data_body.cbLen * get_data.chunk_size, 
							DB_Parameter.pData, 
							DB_Parameter.cbLen) THEN
			IF fbPLCDBCmd.bError THEN
				State := E_DbLogState.error;
			ELSE
				State := E_DbLogState.init;
			END_IF				
		END_IF
		

	E_DbLogState.error:
		//IF TcResult.RequestEventText(1033, sErrorMessage, SIZEOF(sErrorMessage)) THEN
            //TcResult.Send(F_GetSystemTime());
            State := E_DbLogState.idle;
            bError := TRUE;
        //END_IF

END_CASE
]]></ST>
    </Implementation>
    <Property Name="query" Id="{c27af420-79a3-4c17-9de5-9795776e9055}">
      <Declaration><![CDATA[PROPERTY query : STRING(512)]]></Declaration>
      <Get Name="Get" Id="{651a9235-26b1-4e78-a03a-bd56be9eaa4a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{57239635-62be-4167-b083-03e5cdbcae9c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_query := query;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="queue" Id="{783f7123-f13b-436b-999f-bb0882697016}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY queue : REFERENCE TO dequeue
]]></Declaration>
      <Get Name="Get" Id="{3aa55314-d948-4540-a239-89938f2bca68}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[queue REF= _queue;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{5f8801a8-0e9c-4465-a8c8-048a23cf83b3}">
        <Declaration><![CDATA[
VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_queue := queue;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="RecordSQL">
      <LineId Id="3144" Count="0" />
      <LineId Id="2293" Count="10" />
      <LineId Id="2305" Count="1" />
      <LineId Id="3249" Count="0" />
      <LineId Id="2320" Count="2" />
      <LineId Id="2889" Count="0" />
      <LineId Id="2891" Count="0" />
      <LineId Id="3035" Count="5" />
      <LineId Id="2892" Count="2" />
      <LineId Id="2907" Count="2" />
      <LineId Id="2911" Count="1" />
      <LineId Id="2334" Count="0" />
      <LineId Id="2926" Count="3" />
      <LineId Id="2919" Count="0" />
      <LineId Id="2340" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="RecordSQL.query.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="RecordSQL.query.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="RecordSQL.queue.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="RecordSQL.queue.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>